# ai-story-studio

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: __init__.py  animate_video.py  cache.py  config.py  graph.py  main.py  pipeline_web.py  recover_video.py  router.py  server.py  state.py  ui.py  web_builder.py
src/agents/: __init__.py  base.py  compositor.py  image_agent.py  reviewer.py  scene_director.py  story_writer.py  subtitle_agent.py  video_animator.py  voice_agent.py
src/providers/: __init__.py  anthropic_provider.py  elevenlabs_provider.py  google_provider.py  luma_provider.py  openai_image_provider.py  veo_provider.py  whisper_provider.py
src/tools/: __init__.py  file_tools.py
src/web_agents/: __init__.py  backend_agent.py  designer_agent.py  frontend_agent.py  qa_agent.py  reviewer_agent.py  state.py
tests/: __init__.py  test_compositor.py  test_image_agent.py  test_reviewer.py  test_router.py  test_scene_director.py  test_story_writer.py  test_subtitle_agent.py  test_voice_agent.py
web/: app.js  index.html  style.css
