[project]
name = "ai-story-studio"
version = "0.1.0"
description = "Multi-agent fairy tale video generator"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "google-genai>=1.0.0",
    "elevenlabs>=1.0.0",
    "openai>=1.0.0",
    "moviepy>=1.0.3",
]

[project.optional-dependencies]
media = [
    "google-genai>=1.0.0",
    "elevenlabs>=1.0.0",
    "openai>=1.0.0",
    "moviepy>=1.0.3",
]
orchestration = [
    "langgraph>=0.2.0",
]
ui = [
    "streamlit>=1.30.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
story-server = "src.server:start"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
